--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,35 @@
-<!-- Tämä on nettisivun etusivu joka näyttää kirjautuneelle käyttäjälle hakukentän
-tai ei-kirjautuneelle kirjautumisvaihtoehdot -->
-
-<h1>Hyvät Lukemat</h1>
-{% if session.username %}
-<p>Olet kirjautunut nimellä {{ session.username }}</p>
-<h3>Hae kirjaa</h3>
-<form action="/search" method="POST">
-    <p>Hakusana</p>
-    <input type="searchterm" name="searchterm"></p>
-    <input type="checkbox" name="find" value="A"> Kirjailija
-    <input type="checkbox" name="find" value="B"> Kirjan nimi
-    <input type="submit" value="Hae">
-</form>
-<a href="/logout">Kirjaudu ulos</a>
-{% else %}
-<h3>Kirjaudu sisään</h3>
-<form action="/login" method="POST">
-    <p>Tunnus:<br>
-        <input type="text" name="username"></p>
-    <p>Salasana:<br>
-        <input type="password" name="password"></p>
-    <input type="submit" value="Kirjaudu">
-</form>
-<a href="/create_account"> Luo uudet käyttäjätunnukset</a>
-{% endif %}
+<!--Tämä sivu on sivuston etusivu josta linkit muille sivuille. Lisäksi tästä voi hakea kirjoja-->
+<!doctype html>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<title>Hyvät lukemat</title>
+<div class="container">
+    <nav class="navbar navbar-expand-sm navbar-light">
+        <a class="navbar-brand" href="#">By Vesulius</a>
+        <ul class="navbar-nav">
+            {% if session.username %}
+            <li class="nav-item">
+                <a class="nav-link" href="/logout">Kirjaudu ulos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/profile">Käyttäjän {{session.username}} profiili</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="/login_page">Kirjaudu sisään</a>
+            </li>
+            {% endif %}
+        </ul>
+    </nav>
+    <div class="row">
+        <div class="col-8">
+            <h1>Hyvät lukemat</h1>
+            <p>Tällä voit löytää uusia kirjoja sekä kirjoittaa niistä arvosteluja</p>
+            <form action="/search" method="POST">
+                <p>Hakusana</p>
+                <input type="searchterm" name="searchterm">
+                <input type="submit" value="Hae">
+            </form>
+        </div>
+    </div>
+</div>
