readme and admin update

--- a/templates/display_reviews.html
+++ b/templates/display_reviews.html
@@ -4,7 +4,7 @@ sekä pystyä järjestämään niitä pituuden tai arvosanan perusteella -->
 <!doctype html>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-<title>Hyvät lukemat</title>
+<title>Hyvät lukemat/kirja</title>
 <div class="container">
     <nav class="navbar navbar-expand-sm navbar-light">
         <a class="navbar-brand" href="#">By Vesulius</a>
