--- a/templates/profile.html
+++ b/templates/profile.html
@@ -20,7 +20,7 @@
   </nav>
   <div class="row">
     <div class="col-8">
-      <h1>Porfiili</h1>
+      <h1>Profiili</h1>
       <hr>
       {% if reviews_count == 0 %}
       Et ole vielä kirjoittanut yhtään arvostelua
