--- a/templates/delete_book.html
+++ b/templates/delete_book.html
@@ -1,9 +1,15 @@
 <!-- Tämä sivu näytetään vain admin profiileille, tässä sivussa voidaan poistaa kirjoja -->
-<h3>Hei admin, poista kirja tästä</h3>
-<hr>
+{% extends "search_results.html" %}
+{% block content %}
+<h4>{{ message }}</h4>
 {% for book in books %}
-<a href="/display_reviews/{{ book[0] }}">{{book[1]}}, {{book[2]}} sivua</a> <br>
-<a href="/delete_book/{{ book[0] }}">Poista</a>
-<hr>
+<div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">{{ book[1] }}</h5>
+      <p class="card-text">{{ book[2] }} sivua</p>
+      <a href="/display_reviews/{{ book[0] }}" class="card-link">Arvioinnit</a> <br>
+      <a href="/delete_book/{{ book[0] }}">Poista</a>
+    </div>
+</div>
 {% endfor %}
-<a href="/">Takaisin</a>
+{% endblock %}
