--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -1,9 +1,27 @@
 <!-- Tämä tiedosto näyttää haun tulokset
 Lisättäviä ominaisuuksia on haun tarkennus ja erikseen tiettyjen hakujen tekeminen esim sivumäärän mukaan -->
-{{message}}
-<hr>
-{% for book in books %}
-<a href="/display_reviews/{{ book[0] }}">{{book[1]}}, {{book[2]}} sivua</a>
-<hr>
-{% endfor %}
-<a href="/">Takaisin</a>
+<!doctype html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+</head>
+<div class="container">
+    <div class="row justify-contetnt.center">
+        <div class="col-4">
+            {% block content %}
+            <h4>{{ message }}</h4>
+            <hr>
+            {% for book in books %}
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                  <h5 class="card-title">{{ book[1] }}</h5>
+                  <p class="card-text">{{ book[2] }} sivua</p>
+                  <a href="/display_reviews/{{ book[0] }}" class="card-link">Arvioinnit</a>
+                </div>
+              </div>
+            {% endfor %}
+            {% endblock %}
+            <a href="/">Takaisin</a>
+        </div>
+    </div>
+</div>
