--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,10 +13,18 @@
       <li class="nav-item">
         <a class="nav-link" href="/logout">Kirjaudu ulos</a>
       </li>
+      
       <li class="nav-item">
-        <a class="nav-link" href="/delete_profile">Poista profiili</a>
+        {% block notadmin %}
+        <a class="nav-link" class="btn btn-danger" href="/delete_profile">Poista profiili</a>
+        {% endblock %}
       </li>
+      
     </ul>
+    <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
   </nav>
   <div class="row">
     <div class="col-8">
