--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -16,6 +16,6 @@
         <input type="number" name="publication_year"></p>
     <p>Kirjailija:<br>
         <input type="text" name="author"></p>
-    <input type="submit" value="submit">
+    <input type="submit" class="btn btn-primary" value="submit">
 </form>
 {% endblock %}
